@startuml
class Sem_3.models.TableModel {
- Collection<Table> tables
+ Collection<Table> loadTables()
+ int reservationTable(Date,int,String)
+ int changeReservationTable(int,Date,int,String)
}
interface Sem_3.presenters.View {
~ void setObserver(ViewObserver)
~ void updateTablesView(Collection<Table>)
~ void updateReservationTableResult(int)
}
class Sem_3.presenters.BookingPresenter {
- View bookingView
- Model tableModel
- Collection<Table> loadTables()
+ void showTables()
- void showReservationTableResult(int)
+ void onReservationTable(Date,int,String)
+ void onChangeReservationTable(int,Date,int,String)
}
class Sem_3.models.Table {
- {static} int counter
- Collection<Reservation> reservations
- int no
+ int getNo()
+ Collection<Reservation> getReservations()
+ String toString()
}
class Sem_3.views.BookingView {
- ViewObserver observer
+ void setObserver(ViewObserver)
+ void updateTablesView(Collection<Table>)
+ void updateReservationTableResult(int)
+ void reservationTableEvent(Date,int,String)
+ void changeReservationTable(int,Date,int,String)
}
class Sem_3.models.Reservation {
- {static} int counter
- int id
- Date date
- String name
+ int getId()
+ Date getDate()
+ String getName()
}
class Sem_3.Program {
+ {static} void main(String[])
}
interface Sem_3.presenters.ViewObserver {
~ void onReservationTable(Date,int,String)
~ void onChangeReservationTable(int,Date,int,String)
}
interface Sem_3.presenters.Model {
~ Collection<Table> loadTables()
~ int reservationTable(Date,int,String)
~ int changeReservationTable(int,Date,int,String)
}


Sem_3.presenters.Model <|.. Sem_3.models.TableModel: implements
Sem_3.presenters.ViewObserver <|.. Sem_3.presenters.BookingPresenter: implements
Sem_3.presenters.View <|.. Sem_3.views.BookingView: implements

Sem_3.models.Reservation "0" --* "0.*" Sem_3.models.Table
Sem_3.models.Table "0" --* "0.*" Sem_3.models.TableModel
Sem_3.presenters.BookingPresenter "0" --* "0.*" Sem_3.models.TableModel
Sem_3.Program --> Sem_3.presenters.BookingPresenter
Sem_3.Program --> Sem_3.views.BookingView
@enduml